# saintos

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  INSTALL.md  README.md  SAINT_OS_SPEC.md
controller/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
controller/src-tauri/capabilities/: default.json
controller/src-tauri/icons/: .gitkeep
controller/src-tauri/src/: commands.rs  discovery.rs  lib.rs  main.rs
controller/src-tauri/src/bindings/: config.rs  mapper.rs  mod.rs  presets.rs
controller/src-tauri/src/input/: gamepad.rs  gyro.rs  manager.rs  mod.rs  steamdeck_hid.rs
controller/src-tauri/src/protocol/: client.rs  messages.rs  mod.rs
firmware/raspberrypi/: README.md  pyproject.toml
firmware/raspberrypi/config/: saint-node.service
firmware/raspberrypi/docs/: INSTALL.md
firmware/raspberrypi/saint_node/: __init__.py  ble_transport.py  config.py  gpio_control.py  node.py  peripheral_manager.py  pi_model.py  soundboard.py  updater.py
firmware/raspberrypi/saint_node/peripherals/: audio_mixer.py  audio_mixer_base.py  audio_player_base.py  console_display.py  kangaroo.py  maestro.py  pathfinder_bms.py  roboclaw.py  syren.py  tic.py
firmware/raspberrypi/scripts/: build-ros2-trixie.sh  bundle-debs.sh  install.sh  package.sh
firmware/raspberrypi/simulation/: README.md  raspberrypi_node_manager.py  setup_env.sh
firmware/rp2040/: CMakeLists.txt  build.sh
firmware/rp2040/bootloader/: CMakeLists.txt  bl_info.c  bootloader_shell.ld  bootloader_w5500_init.c  http_transport_w5500.c  main.c
firmware/rp2040/docs/: INSTALL.md
firmware/rp2040/include/: flash_storage.h  pin_control.h  pio_uart.h  platform.h  roboclaw_driver.h  saint_node.h  syren_driver.h  transport_w5500.h  w5500_driver.h
firmware/rp2040/simulation/: .gitignore  saint_node_manager.py
firmware/rp2040/simulation/renode_rp2040/: run_multi_nodes.resc  run_saint_node.resc  run_saint_node_softtest.resc
firmware/rp2040/src/: discovery.c  fas100_driver.c  fas100_transport.c  flash_storage.c  kangaroo_transport.c  led_status.c  maestro_driver.c  main.c  node_state.c  pathfinder_bms_transport.c  pin_config.c  pin_control.c  pio_uart.c  pio_uart.pio  roboclaw_driver.c  roboclaw_transport.c  syren_driver.c  syren_transport.c  tic_transport.c  tmc2208_transport.c  uart_pin_pairs.c
firmware/rp2040/tests/: run_tests.sh  test_fas100_parser.c  test_kangaroo_driver.c  test_maestro_driver  test_maestro_driver.c  test_roboclaw_driver.c  test_tic_driver.c  test_tmc2208_driver.c
firmware/rp2040/tools/: combine_uf2.py
firmware/rp2040/transport/: transport_w5500.c  wizchip_port.c
firmware/rpi5/: README.md  pyproject.toml
firmware/rpi5/config/: saint-node.service
firmware/rpi5/saint_node/: gpio_control.py  node.py  peripheral_manager.py  uart_transport.py  updater.py
firmware/rpi5/saint_node/peripherals/: __init__.py  audio_player.py  base.py  fas100.py  maestro.py  pathfinder_bms.py
firmware/rpi5/scripts/: package.sh
firmware/rpi5/simulation/: README.md  rpi5_node_manager.py  setup_env.sh
saint_os/: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
saint_os/cmake/Modules/: FindPythonInterp.cmake  FindPythonLibs.cmake
saint_os/config/: server.yaml
saint_os/config/boards/rp2040/: feather_rp2040_w5500.yaml  global.yaml
saint_os/config/roles/: arms_right.yaml  console.yaml  cradle_base.yaml  head.yaml  neck.yaml  tracks.yaml
saint_os/docs/: DEPLOYMENT.md  DEVELOPMENT.md  SERVER_GUIDE.md
saint_os/firmware/rp2040/: .gitignore  CMakeLists.txt  README.md  build.sh
saint_os/firmware/rp2040/bootloader/: CMakeLists.txt  README.md  bootloader_w5500_init.c  http_transport_w5500.h  main.c
saint_os/firmware/rp2040/cmake/: GenerateVersion.cmake
saint_os/firmware/rp2040/docs/: INSTALL.md  SIMULATION.md
saint_os/firmware/rp2040/include/: discovery.h  fas100_driver.h  flash_storage.h  pathfinder_bms_driver.h  pin_config.h  pin_control.h  platform.h  roboclaw_driver.h  saint_node.h  transport_serial.h  (+3 more)
saint_os/firmware/simulation/: README.md  node_manager.py
saint_os/firmware/teensy41/: build.sh  generate_version.py  platformio.ini
saint_os/launch/: saint_server.launch.py  server.launch.py
saint_os/msg/: ArmCommand.msg  ConsoleInput.msg  GripperCommand.msg  HeadCommand.msg  HeadState.msg  LiveLinkFrame.msg  LiveLinkSubject.msg  NodeAnnouncement.msg  PeripheralInfo.msg  RCReceiverState.msg  RouteStatus.msg  TrackState.msg
saint_os/saint_common/: __init__.py
saint_os/saint_server/: __init__.py  board_config.py  discovery.py  peripheral_logger.py  peripheral_model.py  server_node.py  terminal_session.py  update_manager.py
saint_os/saint_server/config/: __init__.py  server_config.yaml
saint_os/saint_server/livelink/: __init__.py  receiver.py
saint_os/saint_server/rc_receiver/: __init__.py
saint_os/saint_server/roles/: __init__.py
saint_os/saint_server/ros_bridge/: __init__.py  bridge.py  endpoints.yaml  message_types.py  qos_profiles.py
saint_os/saint_server/router/: __init__.py  routing_evaluator.py
saint_os/saint_server/unreal/: __init__.py  animation.py  data_asset_reader.py
saint_os/saint_server/webserver/: __init__.py  http_server.py  state_manager.py  websocket_handler.py
saint_os/scripts/: build.bat  build.py  build_firmware.py  dev.sh  saint_server
saint_os/srv/: FirmwareDownload.srv  ResetNode.srv  SystemCommand.srv
saint_os/test/: conftest.py  test_adopt_override.py  test_board_config.py  test_capability_flow.py  test_capability_json_contract.py  test_control_flow.py  test_firmware_update_message.py  test_node_logs.py  test_persistence_paths.py  test_router.py  test_server.py  test_state_manager.py
saint_os/web/: MIGRATION.md  index.html  legacy.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
saint_os/web/css/: fonts.css  style.css
saint_os/web/js/: app.js  boards.js  controlpage.js  livelink.js  moods.js  nodelive.js  nodelogs.js  peripherals.js  pinconfig.js  pincontrol.js  routing.js  statecontrols.js  terminal.js  updates.js  websocket.js  widgets.js
saint_os/web/src/: App.vue  main.js  style.css
(+627 files in other folders)
