[develop]
script_dir=$base/lib/saint_os

[install]
install_scripts=$base/lib/saint_os

[metadata]
name = saint_os
version = attr: saint_os.__version__
description = SAINT.OS - System for Articulated Intelligence and Navigation Tasks
long_description = file: README.md
long_description_content_type = text/markdown
author = SAINT.OS Team
author_email = maintainer@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Robotics

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    test*
    tests*

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info
ignore = E203, W503

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[tool:pytest]
testpaths = test
python_files = test_*.py
python_functions = test_*
asyncio_mode = auto

[coverage:run]
source = saint_server,saint_common
omit = */test/*,*/__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
