[package]
name = "saint-controller"
version = "0.1.0"
description = "SAINT.OS Controller Application"
authors = ["SAINT.OS Team"]
edition = "2021"

[lib]
name = "saint_controller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
gilrs = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
libc = "0.2"
hidapi = "2.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString", "NSNotification"] }
objc2-game-controller = { version = "0.2", features = ["GCController", "GCExtendedGamepad", "GCControllerElement", "GCControllerAxisInput", "GCControllerButtonInput", "GCControllerDirectionPad", "GCPhysicalInputProfile"] }
block2 = "0.5"

[profile.release]
# Note: Don't use strip = true, it removes symbols Tauri needs for __TAURI_BUNDLE_TYPE
strip = false
lto = true
codegen-units = 1
panic = "abort"
