[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saint-node"
version = "1.0.0"
description = "SAINT.OS Raspberry Pi 5 Node Firmware"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SAINT.OS Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]
dependencies = [
    "pyyaml>=6.0",
    "pyserial>=3.5",
    # python-vlc backs the built-in audio_player peripheral. Wraps
    # libvlc, which must also be installed at the system level
    # (`apt install vlc-bin libvlc-dev` on Raspberry Pi OS). The Python
    # import is lazy in the driver, so a host without libvlc just
    # logs an error and disables the audio_player — the rest of the
    # node keeps running.
    "python-vlc>=3.0",
    # bleak is the cross-platform BLE central client. Used by the
    # ble_transport for JBD-protocol BMSes (and any future BLE
    # peripherals). On Linux/Pi it talks to BlueZ over D-Bus; the
    # `saint` service user needs to be in the `bluetooth` group.
    # Import is lazy — a host without bleak still loads the driver,
    # only BLE-mode instances fail to open.
    "bleak>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
saint-node = "saint_node.node:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["saint_node*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
